Ripping out old grid, replacing it with suzy
Signed-off-by: Adam Hjerpe <adam.hjerpe@hotmail.com>

--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -6,10 +6,15 @@ $background-col: #ddd;
 $text-col: #222;
 
 $large-page-width: 75em;
-$gutter-width: 1.5em;
-$column-count: 12; // Locked in to 12, DON'T FUCKING CHANGE IT! The naming convention of the grid mixin is dependent on this staying the same. So basically if you change this you will break the design, and we don't want that now de we?
 $red: rgb(192, 56, 43);
 $bold-col: $red;
 $shadow-text-col: #6a6d76;
 
 $base-font: "Proxima Nova", sans-serif;
+
+
+// Susy vars
+$total-columns: 12;
+$column-width: 4.75em;
+$gutter-width: 1.5em;
+$grid-padding: $gutter-width;
