--- a/sass/modules/_article-gallery.scss
+++ b/sass/modules/_article-gallery.scss
@@ -21,6 +21,7 @@
       left: 50%;
       box-sizing: border-box;
       margin-left: -$button-size / 2;
+      padding: 0;
       width: $button-size;
       height: $button-size;
       border-radius: 100%;
