--- a/sass/modules/_article-gallery.scss
+++ b/sass/modules/_article-gallery.scss
@@ -25,10 +25,10 @@
       width: $button-size;
       height: $button-size;
       border-radius: 100%;
-
-      background: url(../assets/img/Plus_symbol.svg) $bold-col;
+      background-image: url(../assets/img/Plus_symbol.svg);
       background-position: center center;
       background-size: 3.5em;
+      background-color: $bold-col;
       box-shadow: 0 0 0 0.4em fade_out($bold-col, 0.7);
     }
   }
