--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -29,7 +29,7 @@ $base-font: "Proxima Nova", sans-serif;
 
 // Susy vars
 $total-columns: 12;
-$column-width: 4.5em;
+$column-width: 4.75em;
 $gutter-width: 1.5em;
 $grid-padding: $gutter-width;
 
@@ -41,10 +41,10 @@ $bp-medium: 45em;
 // $media-layout: 12;          // Use 12-col layout at matching min-width.
 // $media-layout: 30em;        // At min 30em, use closest fitting layout.
 // $media-layout: 30em 12;     // At min 30em, use 12-col layout.
-$media-layout: 60em 12;
-// $media-layout: 30em 60em;   // Between min 30em & max 60em, use closest layout.
-$media-layout: 30em 8 60em;// Use 12 cols between min 30em & max 60em.
-$media-layout: 1 30em;// Same. Larger length will always be max-width.
-$media-layout : 12 lt-ie9;  // Output is included under `.lt-ie9` class,
-                            // for use with IE conditional comments
+// $media-layout: 60em 12;
+// // $media-layout: 30em 60em;   // Between min 30em & max 60em, use closest layout.
+// $media-layout: 30em 8 60em;// Use 12 cols between min 30em & max 60em.
+// $media-layout: 1 30em;// Same. Larger length will always be max-width.
+// $media-layout : 12 lt-ie9;  // Output is included under `.lt-ie9` class,
+//                             // for use with IE conditional comments
                             // on the <html> tag.
